# chopshop

./: .gitignore  README.MD  pyproject.toml
src/chopshop/: ChopShop.py  __init__.py  extract_whisper_embeddings.py  split_wav_by_speaker.py
src/chopshop/audio/: convert_to_wav.py  extract_wav_from_video.py  extract_whisper_embeddings.py  extract_whisper_embeddings_subproc.py  split_wav_by_speaker.py
src/chopshop/audio/diarizer/: whisper_diar_wrapper.py
src/chopshop/audio/diarizer/whisper-diarization/: diarize_custom.py
src/chopshop/class_methods/: analyze_with_archetypes.py  analyze_with_dictionaries.py  diarize_with_thirdparty.py  export_whisper_embeddings.py  gather_text.py  split_audio_streams.py  split_wav_by_speaker.py
src/chopshop/diarizer/: whisper_diar_wrapper.py
src/chopshop/diarizer/whisper-diarization/: diarize_custom.py
src/chopshop/helpers/: find_files.py  text_gather.py
src/chopshop/pipelines/: run_pipeline.py
src/chopshop/pipelines/presets/: conversation_video.yaml  speech_basic.yaml
src/chopshop/text/: analyze_with_archetypes.py  analyze_with_dictionaries.py  extract_sentence_embeddings.py  multi_dict_analyzer.py  text_gather.py
src/chopshop/text/dictionary_analyzers/: multi_archetype_analyzer.py
